# Audio

./: .gitignore  CMakeLists.txt  CMakePresets.json  GeneratePackages.bat  GenerateProjectFiles.bat  INSTALL.md  README.md  install.bat  install.ps1  uninstall.ps1  vcpkg.json
.github/workflows/: release.yml
cmake/: AudioConfig.cmake.in
example/: CMakeLists.txt  main.cpp
inc/Audio/: Device.hpp  Listener.hpp  Sound.hpp  Waveform.hpp
ports/audio/: portfile.cmake  usage
src/: Listener.cpp  Sound.cpp  Waveform.cpp  WaveformImpl.cpp
